--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.6'  # latest LTS
-          - '1'
+          - '1'  # current stable
           - 'nightly'
         os: [ubuntu-latest]
         arch: [x64]
