--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,17 @@ authors = ["Miguel Bazdresch <miguelb@2pif.info> and contributors"]
 version = "0.1.0"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-julia = "1.8"
 LsqFit = "0.13"
 RecipesBase = "1"
 SnoopPrecompile = "1"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
