--- a/Project.toml
+++ b/Project.toml
@@ -7,13 +7,13 @@ version = "0.1.0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 LsqFit = "0.13"
 RecipesBase = "1"
-SnoopPrecompile = "1"
+PrecompileTools = "1"
 julia = "1.8"
 
 [extras]
