--- a/Project.toml
+++ b/Project.toml
@@ -6,14 +6,15 @@ version = "0.1.0"
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
-RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 LsqFit = "0.13"
-RecipesBase = "1"
 PrecompileTools = "1"
+RecipesBase = "1"
+Zygote = "0.6"
 julia = "1.8"
 
 [extras]
