--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,31 +3,35 @@ name: CI
 on:
   pull_request:
   push:
-   branches: [main]
-
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+    tags:
+      - v*
+  workflow_dispatch:
 
 jobs:
-  test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - '1.8'
-          - '1.9'
-        os: [ubuntu-latest]
-        arch: [x64]
-
+  julia-1.8:
+    name: Julia LTS
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - run: sudo apt-get -y install gnuplot
       - uses: julia-actions/setup-julia@latest
         with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
+          version: 1.8
+          arch: x64
+      - uses: actions/checkout@v3
+      - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
+
+  julia-stable:
+    name: Julia Stable
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: sudo apt-get -y install gnuplot
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: 1
+          arch: x64
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
